<resources>
    <string name="app_name">MyCatalogueMovie</string>
    <string name="Search">Search</string>
    <string name="setting">Setting</string>
    <string name="read_more">Read more</string>
    <string name="date_released">Date Released</string>
    <string name="colon">:</string>
    <string name="language">Language</string>
    <string name="popularity">Popularity</string>
    <string name="overview">Overview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="now_playing">Now Playing</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="home">Home</string>
    <string name="search_movie">Search Movie</string>
    <string name="fav">Favorite</string>
    <string name="fav_success">One movie added to favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fav_movie">Favorite Movie</string>
    <string name="no_data">There is no data now</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="setting_daily_reminder">Daily Reminder</string>
    <string name="setting_release_reminder">Release Today Reminder</string>
    <string name="setting_lang">Languages</string>
    <string name="change_lang">Change your phone languages</string>
    <string name="activate_daily_reminder">Activate daily reminder</string>
    <string name="daily_activated">Daily reminder activated</string>
    <string name="daily_activated_cancel">Daily reminder is not activated</string>
    <string name="release_activated">Release today reminder activated</string>
    <string name="release_activated_cancel">Release today reminder is not activated</string>
    <string name="activate_release_reminder">Activate release today reminder</string>
    <string name="remindertext">get released today!!! Click to see details</string>
    <string name="daily_reminder">Watch movie now!!</string>
    <string name="daily_text">Dont forget to check new movie today</string>
    <string name="del_success">Deleted from favorite</string>

</resources>
